<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:weightSum="10">

        <ImageButton
            android:id="@+id/btn_prev_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_back" />

        <TextView
            android:id="@+id/calendar_text"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            android:layout_weight="6"
            android:gravity="center"
            android:text="@string/date"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/btn_next_day"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="end|center_vertical"
            android:layout_weight="2"
            android:background="@android:color/transparent"
            android:contentDescription="@string/next"
            android:src="@drawable/ic_forward" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/grid_layout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_below="@+id/top"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:rowCount="2">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@color/cell"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/steps_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/steps"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <devlight.io.library.ArcProgressStackView
                    android:id="@+id/apsv_steps"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:apsv_animated="true"
                    app:apsv_draw_width="20%"
                    app:apsv_model_bg_enabled="true"
                    app:apsv_preview_bg="@color/background_light"
                    app:apsv_preview_colors="@array/steps"
                    app:apsv_rounded="true"
                    app:apsv_shadow_color="#212121"
                    app:apsv_start_angle="130"
                    app:apsv_sweep_angle="280"
                    app:apsv_text_color="@android:color/transparent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:text="@string/steps"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@color/cell"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/distance_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/distance"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <devlight.io.library.ArcProgressStackView
                    android:id="@+id/apsv_distance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:apsv_animated="true"
                    app:apsv_draw_width="20%"
                    app:apsv_model_bg_enabled="true"
                    app:apsv_preview_bg="@color/background_light"
                    app:apsv_preview_colors="@array/distance"
                    app:apsv_rounded="true"
                    app:apsv_shadow_color="#212121"
                    app:apsv_start_angle="130"
                    app:apsv_sweep_angle="280"
                    app:apsv_text_color="@android:color/transparent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:text="@string/distance"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@color/cell"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/calories_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/calories"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <devlight.io.library.ArcProgressStackView
                    android:id="@+id/apsv_calories"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:apsv_animated="true"
                    app:apsv_draw_width="20%"
                    app:apsv_model_bg_enabled="true"
                    app:apsv_preview_bg="@color/background_light"
                    app:apsv_preview_colors="@array/calories"
                    app:apsv_rounded="true"
                    app:apsv_shadow_color="#212121"
                    app:apsv_start_angle="130"
                    app:apsv_sweep_angle="280"
                    app:apsv_text_color="@android:color/transparent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:text="@string/calories"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view4"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="8dp"
            android:background="@color/cell"
            app:cardCornerRadius="20dp"
            app:cardElevation="8dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp">

                <TextView
                    android:id="@+id/active_time_txt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/active_time"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

                <devlight.io.library.ArcProgressStackView
                    android:id="@+id/apsv_active_time"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    app:apsv_animated="true"
                    app:apsv_shadowed="true"
                    app:apsv_draw_width="20%"
                    app:apsv_model_bg_enabled="true"
                    app:apsv_preview_bg="@color/background_light"
                    app:apsv_preview_colors="@array/active_time"
                    app:apsv_rounded="true"
                    app:apsv_shadow_color="#212121"
                    app:apsv_start_angle="130"
                    app:apsv_sweep_angle="280"
                    app:apsv_text_color="@android:color/transparent" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center"
                    android:text="@string/active_time"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </FrameLayout>

        </android.support.v7.widget.CardView>

    </GridLayout>

</RelativeLayout>